--- a/style.css
+++ b/style.css
@@ -495,6 +495,8 @@ input, select {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
+  box-sizing: border-box;
+
 }
 
 .pre-approval-form {
