--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
 }
 
 .site-logo {
-  height: 60px;
+  height: 3rem;
   width: auto;
-  border-radius: 1px;
+  border-radius: 4px;
 }
 
 .logo {
